kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
